--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,43 @@ h1{
 #container{
     width: 70%;
     height: 80vh;
-    background-color: #fff;
+
     margin: 5vh auto;
-    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#buttonContainer{
+    width: 100%;
+    height: 9%;
+
+    background-color: #fff;
+    border-radius: 8px 8px 0 0;
+
+    display: flex;
+    align-items: center;
+
+    padding-left: 5%;
+}
+
+button{
+    font-size: 0.8em;
+    padding: 0.3em 0.5em;
+    border-radius: 8px;
+}
+
+#taskButton{
+    color: #fff;
+    background-color: #47adf1;
+    border: 2px solid #47adf1;
+}
+
+#sectionButton{
+    color: lightgrey;
+    margin-left: 0.5em;
+    
+    background: none;
+    border: 2px solid currentColor;
 }
